<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="30sp"
    android:layout_marginBottom="100sp"
    android:layout_marginTop="30sp"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30sp"
        android:layout_marginTop="20sp"
        android:layout_marginBottom="60sp"
        android:text="@string/settingsMenu"
        android:textSize="30sp" />


    <CheckBox
        android:id="@+id/doubleCheckBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:checked="true"
        android:minHeight="48dp"
        android:text="@string/enableDouble"
        android:textSize="30sp" />

    <CheckBox
        android:id="@+id/tripleCheckBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30sp"
        android:checked="true"
        android:minHeight="48dp"
        android:text="@string/enableTriple"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/saveBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="60sp"
            android:text="@string/saveBtn"
            android:textSize="20sp" />

        <Button
            android:id="@+id/cancelBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="60sp"
            android:text="@string/cancelBtn"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>